@@ -32,7 +32,9 @@
 */
 
 body, td, th {
-    font: 80%  "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
+  /*  font: 80%  "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif; */
+   font: normal 87.5%/1.4 Arial, sans-serif;
+   color: #333;
 }
 
 body
@@ -99,65 +101,81 @@ p, ul, li
 	color: #cc3300;
 }
 
+pre,
+tt,
+code,
+samp,
+kbd {
+    background-color: #eee;
+    color: #333;
+}
+/* fix if background-color hides underlining */
+em.u code {
+    text-decoration: underline;
+}
 
+/*code new tmpl  start*/
 pre {
-  margin: 0 0 1.0em 0;
-  font-size: 120%;
-  padding: 0.5em;
-  border: 1px dashed black;
-  color: black;
-  overflow: auto;
+    border: 1px solid #ccc;
+    padding: .75em 1em;
+}
+/* for code in <file> */
+pre.file {
 }
 
-/* code blocks by code tag */
-pre.code {
-  background-color: #f7f9fa;
-  line-height:100%;
-}
-pre.file { 
-  background-color:  #dee7ec; 
-  line-height:100%;
+/* filenames for downloadable file and code blocks */
+dl.code,
+dl.file {	
 }
 
-h1,h2,h3,h4,h5 {
-    color: black;
-    background-color: inherit;
-    font-size: 100%;
+dl.code dt,
+dl.file dt {
+    background-color: #eee;
+    /*background: -moz-linear-gradient(   top, #fff 0%, #eee 100%); see FS#2447 */
+    background: -webkit-linear-gradient(top, #fff 0%, #eee 100%);
+    background: -o-linear-gradient(     top, #fff 0%, #eee 100%);
+    background: -ms-linear-gradient(    top, #fff 0%, #eee 100%);
+    background: linear-gradient(        top, #fff 0%, #eee 100%);
+    color: inherit;
+    border: 1px solid #ccc;
+    border-bottom-color: #eee;
+    border-top-left-radius: .3em;
+    border-top-right-radius: .3em;
+    padding: .3em .6em .1em;
+    margin-bottom: -1px;
+    float: left;
+}
+dl.code dt a,
+dl.file dt a {
+    background-color: transparent;
+    font-size: 0.875em;
     font-weight: normal;
-    margin: 0 0 1em 0;
-    padding: 0.5em 0 0 0;
-    border-bottom: 1px solid #8cacbb;
+    display: block;
+    min-height: 16px;
+	color: #51A5D6 !important;
+}
+dl.code dd,
+dl.file dd {
+    margin: 0;
     clear: left;
 }
+/* Code new tmpl ends */
 
 
-h1,h2,h3,h4,h5
- {
-  color: black !important;
-  text-decoration: none !important;
-}
-
-h1 {font-size: 160%; margin-left: 0px; font-weight: bold;}
-h2 {font-size: 150%; margin-left: 20px;}
-h3 {font-size: 140%; margin-left: 40px; border-bottom: none; font-weight: bold;}
-h4 {font-size: 120%; margin-left: 60px; border-bottom: none; font-weight: bold; }
-h5 {font-size: 100%;  margin-left: 80px; border-bottom: none; font-weight: bold;}
-
-div.level1 {margin-left: 3px;}
-div.level2 {margin-left: 23px;}
-div.level3 {margin-left: 43px;}
-div.level4 {margin-left: 63px;}
-div.dokuwiki div.level5 {margin-left: 83px;}
-
-img.media {
-  border: 0;
-  margin: 3px;
-}
-
-img.medialeft {
-  border: 0;
-  margin: 0 1.5em 0 0;
-  float: left;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+caption,
+legend {
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    background-color: inherit;
+    padding: 0;
+    line-height: 1.2;
+    clear: left; /* ideally 'both', but problems with toc */
 }
 
 img.baseline {
@@ -168,18 +186,29 @@ img.baseline {
   margin: 3px;
 }
 
-img.mediaright {
-  border: 0;
-  float: right;
-  margin: 0 0 0 1.5em;
+/* image alignment */
+.medialeft {
+    float: left;
 }
-
-img.mediacenter, .mediacenter {
-  text-align:center;
-  display:block;
-  border: 0 ;
-  border-top: 3px solid none;
-  margin: 0 auto;
+.mediaright {
+    float: right;
+}
+.mediacenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+img.media {
+    margin: .2em 0;
+}
+img.medialeft {
+    margin: .2em 1em .2em 0;
+}
+img.mediaright {
+    margin: .2em 0 .2em 1em;
+}
+img.mediacenter {
+    margin: .2em auto;
 }
 
 
@@ -203,39 +232,53 @@ a.fn_bot {
  font-weight: bold;
 }
 
-/* unordered lists */
-ul {
-  line-height: 1.5em;
-  list-style-type: square;
-  list-style-image: none;
-  margin: 0 0 1em 3.5em;
-  color: black;
-}
+/*____________ lists ____________*/
 
-/* ordered lists */
+ul,
 ol {
-  line-height: 1.5em;
-  list-style-image: none;
-  margin: 0 0 1em 3.5em;
-  color: black;
- 
+    padding: 0 0 0 1.5em;
+}
+li,
+dd {
+    padding: 0;
+    margin: 0 0 0 1.5em;
+}
+dt {
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
 }
 
-/* no gap in between nested lists */
-li ul {
-  margin-bottom: 0;
+li ul,
+li ol,
+li dl,
+dl ul,
+dl ol,
+dl dl {
+    margin-bottom: 0;
+    padding: 0;
 }
-li ol {
-  margin-bottom: 0;
+li li {
+    font-size: 100%;
 }
 
+ul             { list-style: square outside; }
+ol             { list-style: decimal outside; }
+ol ol          { list-style-type: lower-alpha; }
+ol ol ol       { list-style-type: upper-roman; }
+ol ol ol ol    { list-style-type: upper-alpha; }
+ol ol ol ol ol { list-style-type: lower-roman; }
 
-ol {list-style-type: decimal}
-ol ol {list-style-type: upper-roman}
-ol ol ol {list-style-type: lower-alpha}
-ol ol ol ol {list-style-type: lower-greek}
 
-li { font-weight: normal; }
+a.urlextern,
+a.windows,
+a.mail,
+a.mediafile,
+a.interwiki {
+    background-repeat: no-repeat;
+    background-position: 0 center;
+    padding: 0 0 0 20px;
+}
 
 a.windows {
   background: transparent url(images/windows.gif) 0px 1px no-repeat;
@@ -250,6 +293,19 @@ a.urlextern {
  color: #436976 !important;
  text-decoration: none !important;
 }
+
+
+a.wikilink2:link,
+a.wikilink2:visited {
+    border-bottom: 1px dashed;
+}
+a.wikilink2:hover,
+a.wikilink2:active,
+a.wikilink2:focus {
+    border-bottom-width: 0;
+}
+
+
 
 a.wikilink2 {
   color: red !important;
@@ -269,39 +325,7 @@ span.np_break {
   margin:0px;
 }
 
-/* filenames for file and code blocks */
- dl.file,
- dl.code {
-    margin-top: 2em;
-    margin-bottom: 2.5em;
-}
 
- dl.file dt,
- dl.code dt {
-    border: 1px dashed #8cacbb;
-    display: inline;
-    padding: 0.1em 1em;
-    margin-left: 5em;
-}
-
- dl.code dt a,
- dl.file dt a {
-    color:#000;
-}
-
- dl.code dt {
-    background-color: __background_other__;
-    border-bottom: 1px solid __background_other__;
-}
-
- dl.file dt {
-    background-color: #dee7ec;
-    border-bottom: 1px solid #dee7ec;
-}
-
-dd pre.file {
-    line-height: 125%;
-}
 /* syntax highlighting code */
 .code .br0  { color: #66cc66; }
 .code .co0  { color: #808080; font-style: italic; }
@@ -493,8 +517,5 @@ a.interwiki {
     color: #436976 !important;
     text-decoration: none !important;
 }    
-/*
-a.interwiki {
-    background-image: url(images/fileicons/wp.gif);
-}
-*/
+
+    
